--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# should be rewritten , by local version, when pulled
-# should be put back, when pushed
-API_KEY=<someapikey> 
+# should be rewritten , by local version, when staged
+# should be put back, when working directory is updated
+API_KEY={SECURE_API_KEY}
