--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 # should be rewritten , by local version, when staged
-# should be put back, when working directory is updated
-API_KEY=fd716224-2881-4262-952f-7802a13ea50a
+# should be put back, when working directory is updated...
+API_KEY={SECURE_API_KEY}
+
+clean
